--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
+    "squizlabs/php_codesniffer": "^3.6",
     "symfony/var-dumper": "^5.3"
   },
   "autoload": {
@@ -35,6 +36,7 @@
   "scripts": {
     "tests": "vendor/bin/phpunit --testdox --no-coverage --colors=always",
     "test-coverage": "XDEBUG_MODE=coverage vendor/bin/phpunit --testdox --colors=always",
-    "phpcs": "vendor/bin/phpcs src tests --standard=PSR12"
+    "phpcs": "vendor/bin/phpcs src tests --standard=PSR12",
+    "phpcs-fix": "vendor/bin/phpcbf"
   }
 }
