--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": "^8.0",
-    "myerscode/utilities-files": "^1.1",
-    "myerscode/utilities-strings": "^1.4"
+    "myerscode/utilities-files": "^1.0|^2.0",
+    "myerscode/utilities-strings": "^1.0|^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
