--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,29 +1,41 @@
-name: Tests
+name: Code Coverage
 
 on:
+  schedule:
+    - cron: "0 0 * * *"
   push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   run:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        php-versions: [ '8.0' ]
+        os: [ ubuntu-latest ]
+        php-versions: [ 8.3 ]
 
     name: PHP ${{ matrix.php-versions }} - ${{ matrix.os }}
     steps:
+
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           coverage: xdebug
+          extensions: intl, fileinfo
+
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
-      - name: Run test suite
-        run: vendor/bin/phpunit --testdox --colors=always
+
+      - name: Run Test Suite
+        run: vendor/bin/phpunit --testdox --coverage-clover ./coverage.xml
+
+      - name: Code Coverage
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          verbose: true
