--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,31 @@
 {
   "name": "myerscode/templex",
   "description": "A lightweight, regex based template rendering engine",
+  "keywords": [
+    "template",
+    "templating",
+    "php template",
+    "regex tempalte",
+    "template engine"
+  ],
   "type": "project",
   "license": "MIT",
   "authors": [
     {
+      "name": "myerscode",
+      "email": "team@myerscode.com",
+      "homepage": "https://myerscode.com"
+    },
+    {
       "name": "Fred Myerscough",
-      "email": "oniice@gmail.com"
+      "email": "fred@myerscough.co.uk",
+      "homepage": "https://fredmyerscough.co.uk"
     }
   ],
   "require": {
-    "php": "^8.0",
-    "myerscode/utilities-files": "^1.0|^2.0",
-    "myerscode/utilities-strings": "^1.0|^2.0"
+    "php": "^8.4",
+    "myerscode/utilities-files": "^2025",
+    "myerscode/utilities-strings": "^2025"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
