--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,18 +1,20 @@
 name: Tests
 
 on:
+  schedule:
+    - cron: "0 0 * * *"
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, feature/** ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, feature/** ]
 
 jobs:
   run:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        php-versions: [ '8.0' ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        php-versions: [ '8.4' ]
 
     name: PHP ${{ matrix.php-versions }} - ${{ matrix.os }}
     steps:
@@ -26,4 +28,4 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
       - name: Run test suite
-        run: vendor/bin/phpunit --testdox --colors=always
+        run: vendor/bin/phpunit --testdox --coverage-html coverage
